# sentineleye

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/backend/: CLAUDE.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_tuya_integration.py  0003_camera_geo.py  0004_system_config.py  0005_detection_classes.py  0006_camera_pin_order.py  0007_alert_events.py  0008_notifications.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: deps.py  router.py
apps/backend/app/api/v1/endpoints/: __init__.py  alert_events.py  alerts.py  auth.py  cameras.py  cloud_integrations.py  detection_events.py  notification_settings.py  recordings.py  system.py  system_admin.py  websockets.py
apps/backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/db/repositories/: __init__.py  alert.py  alert_event.py  base.py  camera.py  cloud_integration.py  detection.py  notification_settings.py  recording.py  system_config.py  user.py
apps/backend/app/models/: __init__.py  alert_event.py  alert_rule.py  camera.py  cloud_integration.py  detection_event.py  notification_settings.py  recording.py  system_config.py  user.py
apps/backend/app/schemas/: alert.py  auth.py  camera.py  cloud_integration.py  common.py  detection_event.py  notification_settings.py  recording.py  system_admin.py  system_config.py
apps/backend/app/scripts/: warm_cache.py
apps/backend/app/services/: __init__.py  alert_service.py  auth_service.py  cache.py  camera_service.py  cloud_integration_service.py  control_plane.py  crypto.py  event_bus.py  notification_settings_service.py  redis_client.py  storage.py  system_admin_seed.py  system_config_service.py  tuya_cloud.py
apps/backend/app/workers/: __init__.py  tasks.py
apps/backend/tests/: conftest.py  test_health.py  test_security.py
apps/backend/tests/services/: test_cache.py
apps/frontend/: .metadata  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
apps/frontend/android/app/: build.gradle.kts
apps/frontend/assets/: config.json
apps/frontend/ios/Runner/: Info.plist
apps/frontend/ios/Runner.xcodeproj/: project.pbxproj
apps/frontend/linux/: CMakeLists.txt
apps/frontend/linux/runner/: my_application.cc
apps/frontend/test/: camera_model_test.dart  widget_test.dart
apps/frontend/web/: index.html  manifest.json
apps/frontend/windows/: CMakeLists.txt
docker/ai-engine/: Dockerfile
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  nginx.conf
docker/notification-service/: Dockerfile
docker/recording-service/: Dockerfile
docs/: API.md  ARCHITECTURE.md  CAMERA_SUPPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALL.md
docs/camera-connections/: USB.md
docs/diagrams/: README.md
scripts/: bootstrap.sh  create-admin.sh  download-models.sh  seed-demo.sh  seed-detections.sh  seed-recordings.sh
scripts/cache/: warm-cache.sh
services/ai-engine/: CLAUDE.md  pyproject.toml
services/ai-engine/app/: __init__.py  config.py  logging.py  main.py
services/ai-engine/app/detectors/: __init__.py  registry.py  yolo.py
services/ai-engine/app/pipelines/: __init__.py
services/ai-engine/app/trackers/: __init__.py  iou_tracker.py
services/ai-engine/tests/: test_tracker.py
services/notification-service/: CLAUDE.md  pyproject.toml
services/notification-service/app/: __init__.py  config.py  main.py
services/notification-service/app/channels/: __init__.py  email.py  telegram.py  webhook.py
services/recording-service/: CLAUDE.md  pyproject.toml
services/recording-service/app/: __init__.py  config.py  main.py  recorder.py
(+7 files in other folders)
