[project]
name = "sentineleye-ai-engine"
version = "0.1.0"
description = "SentinelEye AI engine — YOLO inference + multi-object tracking"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "lap>=0.5.12",
    "filterpy>=1.4.5",
    "scipy>=1.14.0",
    "httpx>=0.27.2",
    "redis[hiredis]>=5.1.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
