[project]
name = "sentineleye-notification-service"
version = "0.1.0"
description = "SentinelEye notification dispatcher (email / telegram / webhook)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.2",
    "aiosmtplib>=3.0.2",
    "redis[hiredis]>=5.1.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "ruff>=0.6.9"]

[tool.ruff]
line-length = 100
target-version = "py312"
