[project]
name = "sentineleye-recording-service"
version = "0.1.0"
description = "SentinelEye recording service — FFmpeg-based segmenter"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.2",
    "boto3>=1.35.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0", "ruff>=0.6.9", "mypy>=1.11.2"]

[tool.ruff]
line-length = 100
target-version = "py312"
